[project]
name = "sequentialthinking"
version = "0.1.0"
description = "MCP server for sequential thinking and problem solving. Adapted from the identically named project by Anthropic, PBC (https://anthropic.com)."
authors = [{ name = "Andrew Cox", email = "dev@andrewcox.doctor" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "fastapi", "sequential-thinking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
sequentialthinking = "sequentialthinking:uvicorn"

[project.urls]
Homepage = "https://modelcontextprotocol.io"
Repository = "https://github.com/modelcontextprotocol/servers"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
